# finam-x-hse-trade-ai-hack-forecast-solution

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
processors/: candle_processor.py  news_processor.py
